--- a/Project Notebook/css/style.css
+++ b/Project Notebook/css/style.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Ubuntu+Condensed);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700);
 
 /*
 	Minimaxing 1.0 by nodethirtythree design
@@ -14,7 +15,7 @@
 		font-size: 13.5pt;
 		font-family: sans-serif;
 		background-color: #e3e9dc;
-		font-family: 'Ubuntu Condensed', sans-serif;
+		font-family: 'Open Sans', sans-serif;
 		color: #878e83;
 		letter-spacing: -1px;
 	}
@@ -32,6 +33,7 @@
 		font-size: 1.6em;
 		letter-spacing: -1px;
 		margin-bottom: 1em;
+		text-transform: uppercase;
 	}
 
 	h3,h4 {
@@ -206,6 +208,7 @@
 			background-image: -ms-linear-gradient(top, #008dab, #007294);
 			background-image: -o-linear-gradient(top, #008dab, #007294);
 			background-image: linear-gradient(top, #008dab, #007294);
+			font-family: 'Ubuntu Condensed', sans-serif;
 		}
 
 		#header {
