--- a/Project App/res/layout/home_menu.xml
+++ b/Project App/res/layout/home_menu.xml
@@ -41,6 +41,7 @@
 
       <Button
           android:id="@+id/button1"
+          style="@style/AppTheme"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentTop="true"
