--- a/Project App/res/layout/activity_main.xml
+++ b/Project App/res/layout/activity_main.xml
@@ -8,6 +8,53 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/app_name" />
+
+    <HorizontalScrollView
+        android:id="@+id/howToPlay"
+        android:layout_width="match_parent"
+        android:layout_marginTop="25dp"
+        android:layout_height="300dp"
+        android:layout_alignParentLeft="true" >
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clipChildren="true"
+            android:orientation="horizontal" >
+            
+            <TextView
+                android:id="@+id/instruction1"
+                android:layout_width="330dp"
+                android:textSize="25sp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="20dp"
+                android:text="@string/instr1" />
+
+            <TextView
+		        android:id="@+id/instruction2"
+		        android:textSize="25sp"
+		        android:layout_width="330dp"
+		        android:layout_height="wrap_content"
+		        android:layout_marginBottom="20dp"
+		        android:layout_alignParentBottom="true"
+		        android:layout_toRightOf="@+id/instruction1"
+		        android:text="@string/instr2" />
+            
+            
+            
+        </RelativeLayout>
+    </HorizontalScrollView>
+
+    
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
@@ -15,15 +62,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="35dp"
-        android:text="Login to Facebook" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="118dp"
-        android:text="ACEMENU" />
+        android:text="@string/Login" />
+    
 
 </RelativeLayout>
