--- a/Project App/res/layout/game_level_menu.xml
+++ b/Project App/res/layout/game_level_menu.xml
@@ -9,58 +9,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="43dp"
-        android:text="level 1" />
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="61dp"
+        android:background="@drawable/arrowdownblue" />
 
     <Button
         android:id="@+id/button2"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button1"
-        android:layout_below="@+id/button1"
-        android:layout_marginTop="20dp"
-        android:text="level 4" />
+        android:layout_alignBaseline="@+id/button1"
+        android:layout_alignBottom="@+id/button1"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="76dp"
+        android:background="@drawable/arrowupblue" />
 
-    <Button
-        android:id="@+id/button4"
-        style="?android:attr/buttonStyleSmall"
+    <EditText
+        android:id="@+id/editText1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/button2"
-        android:layout_marginLeft="20dp"
-        android:layout_toRightOf="@+id/button3"
-        android:text="level 3" />
-
-    <Button
-        android:id="@+id/button3"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button2"
-        android:layout_marginLeft="21dp"
+        android:layout_alignBottom="@+id/button1"
+        android:layout_alignTop="@+id/button1"
+        android:layout_toLeftOf="@+id/button2"
         android:layout_toRightOf="@+id/button1"
-        android:text="level 2" />
+        android:gravity="center"
+        android:background="#3f48cc"
+        android:ems="10"
+        android:focusable="false"
+        android:inputType="number" 
+        android:textColor="#FFFFFF"
+        android:textSize="32sp" />
 
-    <Button
-        android:id="@+id/button5"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button2"
-        android:layout_alignBottom="@+id/button2"
-        android:layout_toLeftOf="@+id/button4"
-        android:text="level 5" />
-
-    <Button
-        android:id="@+id/button6"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button4"
-        android:layout_alignTop="@+id/button5"
-        android:text="level 6" />
+   
 
 </RelativeLayout>
