--- a/App/res/values/color.xml
+++ b/App/res/values/color.xml
@@ -4,7 +4,7 @@
 	 <color name="yellow">#FFFF00</color>
 	 <color name="red">#FF0000</color>
 	 <color name="silver">#C0C0C0</color>
-	 <color name="gray">#808080</color>
+	 <color name="gray">#C0C0C0</color>
 	 <color name="purple">#800080</color>
 	 <color name="aqua">#00FFFF</color>
 	 <color name="teal">#008080</color>
