--- a/App/res/values/color.xml
+++ b/App/res/values/color.xml
@@ -9,7 +9,7 @@
 	 <color name="aqua">#00FFFF</color>
 	 <color name="teal">#008080</color>
 	 <color name="green">#008000</color>
-	 <color name="blue">#0000FF</color>
+	 <color name="blue">#0431B4</color>
 	 <color name="black">#000000</color>
 
 </resources>
