--- a/App/res/layout/level_one.xml
+++ b/App/res/layout/level_one.xml
@@ -65,4 +65,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="35dp"
         android:text="@string/ready" />
+
+  <Button
+      android:id="@+id/button1"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignBottom="@+id/imReady"
+      android:layout_alignLeft="@+id/likes"
+      android:text="@string/Done" />
+
 </RelativeLayout>
