--- a/App/res/layout/level_one.xml
+++ b/App/res/layout/level_one.xml
@@ -14,36 +14,45 @@
         android:textSize="35sp"
         android:text="@string/level1" />
 
+   <TextView
+        android:id="@+id/turotialInstructionAction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/levelNum"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:textSize="15sp"
+        android:textColor="@color/blue"
+        android:text="@string/memorize" />
+    
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="100dp"
         android:layout_height="75dp"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="90dp"
+		android:layout_below="@+id/turotialInstructionAction"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="30dp"
         android:src="@drawable/emir" />
     
     <ImageView
         android:id="@+id/likes"
         android:layout_width="100dp"
         android:layout_height="75dp"
-        android:layout_centerInParent="true"
-        android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/imageView1"
         android:layout_marginLeft="5dp"
-        android:layout_marginTop="90dp"
+		android:layout_below="@+id/turotialInstructionAction"
+		android:layout_marginTop="30dp"
         android:src="@drawable/heart"/>
     
         <ImageView
         android:id="@+id/whatTheyLike1"
         android:layout_width="100dp"
         android:layout_height="75dp"
-        android:layout_centerInParent="true"
-        android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/likes"
         android:layout_marginLeft="5dp"
-        android:layout_marginTop="90dp"
+       	android:layout_below="@+id/turotialInstructionAction"
+		android:layout_marginTop="30dp"
         android:src="@drawable/pizza"/>
         
     <TextView
@@ -55,6 +64,20 @@
         android:layout_marginTop="10dp"
         android:textSize="28sp"
         android:text="@string/level1Statement" />
+    
+    
+    <TextView
+        android:id="@+id/buttonTut"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/imReady"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_centerHorizontal="true"
+        android:textSize="15sp"
+        android:textColor="@color/blue"
+        android:gravity="center"
+        android:text="@string/clickButtonReady" />
     
     
   <Button
@@ -71,7 +94,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/imReady"
-      android:layout_alignLeft="@+id/likes"
+      android:layout_centerInParent="true"
       android:text="@string/Done" />
 
 </RelativeLayout>
