--- a/App/res/layout/level_two.xml
+++ b/App/res/layout/level_two.xml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/level2Relative"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
+    
+    <TextView
+        android:id="@+id/levelNum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
+        android:textSize="35sp"
+        android:text="@string/level2" />
 
     <ImageView
         android:id="@+id/imageView4"
