--- a/App/res/layout/continue_next.xml
+++ b/App/res/layout/continue_next.xml
@@ -10,6 +10,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
+        android:gravity="center"
         android:textSize="35sp"
         android:text="@string/goodJob" />
 
