--- a/App/res/layout/continue_next.xml
+++ b/App/res/layout/continue_next.xml
@@ -2,35 +2,34 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-    
-     <TextView
-        android:id="@+id/goodJob"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="30dp"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:textSize="35sp"
-        android:text="@string/goodJob" />
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="162dp"
-        android:text="@string/continueTo" />
-    
    <Button
-        android:id="@+id/replay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="55dp"
-        android:text="@string/replayLevel" />
-    
+       android:id="@+id/replay"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_alignParentBottom="true"
+       android:layout_centerHorizontal="true"
+       android:layout_marginBottom="108dp"
+       android:text="@string/replayLevel" />
+
+   <Button
+       android:id="@+id/continueGame"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_above="@+id/replay"
+       android:layout_centerHorizontal="true"
+       android:layout_marginBottom="70dp"
+       android:text="@string/continueTo" />
+
+   <TextView
+       android:id="@+id/goodJob"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_alignParentTop="true"
+       android:layout_centerHorizontal="true"
+       android:layout_marginTop="58dp"
+       android:gravity="center"
+       android:text="@string/goodJob"
+       android:textSize="35sp" />
 
 </RelativeLayout>
