--- a/App/res/layout/result.xml
+++ b/App/res/layout/result.xml
@@ -3,26 +3,48 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="64dp"
-        android:text="@string/restart" />
+        <TextView
+            android:id="@+id/oopsText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="56dp"
+            android:ems="10"
+            android:gravity="center"
+            android:text="@string/oops"
+            android:textColor="#000000"
+            android:textSize="32sp" />
 
-    <TextView
-        android:id="@+id/pairsText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="153dp"
-        android:ems="10"
-        android:gravity="center"
-        android:text="@string/gameover"
-        android:textColor="#000000"
-        android:textSize="32sp" />
+        <TextView
+            android:id="@+id/pairsText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:ems="10"
+            android:gravity="center"
+            android:text="@string/gameover"
+            android:textColor="#000000"
+            android:textSize="32sp" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/button1"
+            android:layout_alignRight="@+id/button1"
+            android:layout_below="@+id/button1"
+            android:layout_marginTop="14dp"
+            android:text="@string/review" />
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/pairsText"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="40dp"
+            android:text="@string/restart" />
 
 </RelativeLayout>
