Improvements to alpha webpage added

--- a/Notebook/css/style.css
+++ b/Notebook/css/style.css
@@ -266,6 +266,7 @@
 			background-image: -o-linear-gradient(top, #008ead, #007b9d);
 			background-image: linear-gradient(top, #008ead, #007b9d);
 			height: 86px;
+			width: 1090px;
 		}
 
 		
