--- a/App/res/layout/loading.xml
+++ b/App/res/layout/loading.xml
@@ -11,4 +11,13 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true">
         </ProgressBar>
+
+        <TextView
+            android:id="@+id/loadingFacebook"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/progressBar"
+            android:layout_centerHorizontal="true"
+            android:text="@string/loadingFacebook" />
+
 </RelativeLayout>
