--- a/App/res/values/color.xml
+++ b/App/res/values/color.xml
@@ -5,6 +5,7 @@
 	 <color name="red">#FF0000</color>
 	 <color name="silver">#C0C0C0</color>
 	 <color name="gray">#C0C0C0</color>
+	 <color name="darkgray">#808080</color>
 	 <color name="purple">#800080</color>
 	 <color name="aqua">#00FFFF</color>
 	 <color name="teal">#008080</color>
